--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pradip</title>
+    <title>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eum eligendi cum eos iusto accusamus reprehenderit debitis mollitia nostrum ex voluptate tempore et a fugit soluta similique assumenda, eaque deleniti?</title>
 </head>
 <body>
     <h1>Pradip</h1>
