--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eum eligendi cum eos iusto accusamus reprehenderit debitis mollitia nostrum ex voluptate tempore et a fugit soluta similique assumenda, eaque deleniti?</title>
+    <title>Pradip</title>
 </head>
 <body>
-    <h1>Pradip</h1>
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam culpa quia labore ut magnam ratione earum recusandae accusamus suscipit inventore exercitationem quidem dolorem unde hic iste alias sapiente, facilis autem!</h1>
 </body>
 </html>
