--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Pradip</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam culpa quia labore ut magnam ratione earum recusandae accusamus suscipit inventore exercitationem quidem dolorem unde hic iste alias sapiente, facilis autem!</h1>
+    <h1>I don't know who give u. <br>
+    But i change the domain(link) of the site👋.<br>
+    Thank u🙃.
+</h1>
 </body>
 </html>
